updating my details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hello! My name is Abigail but most people call me Abby. I am an aspiring full stack developer and I am eager to get started in this boot camp!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Charlotte, North Carolina</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love riding horses, hiking, and reading.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Working remotely as a full stack developer.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Indian Trail, North Carolina</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I took some coding courses in college and really enjoyed them.</p>
     </section>
 
     <footer id="footer">
